crates/biome_html_parser/tests/html_specs/ok/svelte/if.svelte
{#if answer === 42}
	<p>what was the question?</p>
{/if}

{#if answer === 42}
	<p>what was the question?</p>
	{#if answer === 42}
  	<p>what was the question?</p>
  	{#if answer === 42}
    	<p>what was the question?</p>
    {/if}
  {/if}
{/if}
