crates/biome_html_parser/tests/html_specs/error/svelte/if_missing_expression.svelte
{#if}
	<span>without whitespace</span>
{/if}

{#if }
	<span>with whitespace</span>
{/if}
